--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- 大图占位符 -->
         <div class="absolute inset-0 overflow-hidden">
             <img 
-                src="national-day-background.jpg" 
+                src="image/national-day-background.jpg" 
                 alt="Background"
                 class="w-full h-full object-cover brightness-50"
             >
@@ -62,7 +62,7 @@
             <button
                 class="mt-8 px-8 py-3 bg-white text-red-700 rounded-full text-lg font-semibold shadow-md hover:bg-red-100 hover:scale-105 transition-all duration-100"
                 onclick="document.getElementById('projectProposal').scrollIntoView({behavior: 'smooth'})">
-                项目建议书
+                项目建议
             </button>
             <button
                 class="mt-8 ml-3 px-8 py-3 bg-white text-red-700 rounded-full text-lg font-semibold shadow-md hover:bg-red-100 hover:scale-105 transition-all duration-100"
@@ -82,7 +82,7 @@
             <section class="relative min-h-[500px] flex items-center py-24 md:py-32" id="teamIntro">
                 <!-- Image Background with Gradient Overlay -->
                 <div class="absolute inset-0 z-0">
-                    <img src="joker-who.png" alt="团队协作图片" class="w-full h-full object-cover">
+                    <img src="image/joker-who.png" alt="团队协作图片" class="w-full h-full object-cover">
                     <!-- 渐变层：从左侧（文字区域）的 bg-gray-100 渐变到右侧的透明（图片区域） -->
                     <div class="absolute inset-0 bg-gradient-to-r from-gray-100 via-gray-100/95 md:w-5/5 to-transparent"></div>
                 </div>
@@ -105,7 +105,7 @@
             <section class="relative min-h-[700px] flex items-center py-24 md:py-32" id="projectProposal">
                 <!-- Image Background with Gradient Overlay -->
                 <div class="absolute inset-0 z-0">
-                    <img src="project-proposal.jpg" alt="项目规划图片" class="w-full h-full object-cover">
+                    <img src="image/project-proposal.jpg" alt="项目规划图片" class="w-full h-full object-cover">
                      <!-- 渐变层：从右侧（文字区域）的 bg-gray-100 渐变到左侧的透明（图片区域） -->
                     <div class="absolute inset-0 bg-gradient-to-l from-gray-100 via-gray-100/95 md:w-5/5 md:ml-auto to-transparent"></div>
                 </div>
@@ -152,7 +152,7 @@
             <section class="relative min-h-[600px] flex items-center py-24 md:py-32" id="dataCollectionPlan">
                  <!-- Image Background with Gradient Overlay -->
                 <div class="absolute inset-0 z-0">
-                    <img src="data-collection.jpg" alt="数据分析图片" class="w-full h-full object-cover">
+                    <img src="image/data-collection.jpg" alt="数据分析图片" class="w-full h-full object-cover">
                     <!-- 渐变层：从左侧（文字区域）的 bg-gray-100 渐变到右侧的透明（图片区域） -->
                     <div class="absolute inset-0 bg-gradient-to-r from-gray-100 via-gray-100/95 md:w-5/5 to-transparent"></div>
                 </div>
@@ -169,8 +169,13 @@
                                     <span class="w-2.5 h-2.5 bg-red-600 rounded-full mr-3"></span> 第一部分：定性数据收集&emsp;
                                     <button
                                         class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
-                                        onclick="window.open('Interview.pdf', '_blank')">
+                                        onclick="window.open('docs/Interview.pdf', '_blank')">
                                         采访提纲
+                                    </button>
+                                    <button
+                                        class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
+                                        onclick="window.open('interview.html', '_blank')">
+                                        采访数据
                                     </button>
                                 </h3>
                                 <ul class="list-none space-y-3 text-light pl-5">
@@ -184,8 +189,13 @@
                                     <span class="w-2.5 h-2.5 bg-red-600 rounded-full mr-3"></span> 第二部分：定量数据收集&emsp;
                                     <button
                                         class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
-                                        onclick="window.open('Survey.pdf', '_blank')">
+                                        onclick="window.open('docs/Survey.pdf', '_blank')">
                                         调查问卷
+                                    </button>
+                                    <button
+                                        class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
+                                        onclick="window.open('survey.html', '_blank')">
+                                        调查数据
                                     </button>
                                 </h3>
                                 <ul class="list-none space-y-3 text-light pl-5">
@@ -211,7 +221,7 @@
 
         <!-- 页脚 -->
         <footer class="text-center mt-12 pb-12 text-gray-500">
-            <p class="text-sm">&copy; 2025 人机蕉户团队</p>
+            <p class="text-sm">2025 人机蕉户团队</p>
         </footer>
 
     </div>
