--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <button
                 class="mt-8 ml-3 px-8 py-3 bg-white text-red-700 rounded-full text-lg font-semibold shadow-md hover:bg-red-100 hover:scale-105 transition-all duration-100"
                 onclick="document.getElementById('dataCollectionPlan').scrollIntoView({behavior: 'smooth'})">
-                数据收集方案
+                数据收集
             </button>
         </div>
     </header>
@@ -170,12 +170,17 @@
                                     <button
                                         class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
                                         onclick="window.open('docs/Interview.pdf', '_blank')">
-                                        采访提纲
+                                        提纲
                                     </button>
                                     <button
                                         class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
-                                        onclick="window.open('interview.html', '_blank')">
-                                        采访数据
+                                        onclick="window.location.href = 'interview.html'">
+                                        数据
+                                    </button>
+                                    <button
+                                        class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
+                                        onclick="window.location.href = 'interview_conclusion.html'">
+                                        分析
                                     </button>
                                 </h3>
                                 <ul class="list-none space-y-3 text-light pl-5">
@@ -190,12 +195,17 @@
                                     <button
                                         class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
                                         onclick="window.open('docs/Survey.pdf', '_blank')">
-                                        调查问卷
+                                        问卷
                                     </button>
                                     <button
                                         class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
-                                        onclick="window.open('survey.html', '_blank')">
-                                        调查数据
+                                        onclick="window.location.href = 'survey.html'">
+                                        数据
+                                    </button>
+                                    <button
+                                        class="mr-3 px-5 py-2 bg-white text-red-700 rounded-full text-lg font-semibold shadow hover:bg-gray-100 hover:scale-105 transition-all duration-100"
+                                        onclick="window.location.href = 'survey_conclusion.html'">
+                                        分析
                                     </button>
                                 </h3>
                                 <ul class="list-none space-y-3 text-light pl-5">
